src/test/ui/borrowck/borrowck-issue-2657-2.stderr
error[E0507]: cannot move out of `*y` which is behind a shared reference
  --> $DIR/borrowck-issue-2657-2.rs:7:18
   |
LL |         let _b = *y;
   |                  ^^
   |                  |
   |                  move occurs because `*y` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait
   |                  help: consider borrowing here: `&*y`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
